# tilde-python-sdk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/cerebral/: __init__.py  _config.py  _object_reader.py  _pagination.py  client.py  exceptions.py  models.py
src/cerebral/mcp/: __init__.py  __main__.py  server.py
src/cerebral/resources/: agents.py  commits.py  connectors.py  groups.py  imports.py  objects.py  organizations.py  policies.py  repositories.py  roles.py  sessions.py
src/tilde/: __init__.py  _config.py  _object_reader.py  _output_stream.py  _pagination.py  _value_types.py  client.py  exceptions.py  models.py
src/tilde/mcp/: __init__.py  __main__.py  server.py
src/tilde/resources/: agents.py  commits.py  connectors.py  groups.py  imports.py  objects.py  organizations.py  policies.py  repositories.py  roles.py  sandbox_triggers.py  sandboxes.py  secrets.py  sessions.py  shell.py
tests/: conftest.py  test_agents.py  test_client.py  test_commits.py  test_config.py  test_connectors.py  test_exceptions.py  test_execute.py  test_groups.py  test_imports.py  test_mcp.py  test_module_api.py  test_object_reader.py  test_objects.py  test_organizations.py  test_pagination.py  test_policies.py  test_repositories.py  test_roles.py  test_sandbox_triggers.py  test_sandboxes.py  test_secrets.py  test_sessions.py  test_shell.py
tests/typecheck/: test_readonly.py
tilde_mcp/: README.md  server.py
