[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilde-sdk"
dynamic = ["version"]
description = "Official Python SDK for Tilde: an agent-native data platform that combines versioned object storage with sandboxed compute"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Treeverse Inc." }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0,<1.0", "fastmcp>=2.0", "websockets>=12.0,<15.0"]

[project.scripts]
tilde-mcp = "tilde.mcp:main"

[project.urls]
Homepage = "https://github.com/tilderun/tilde-python-sdk"
Documentation = "https://docs.tilde.run/python-sdk/"

[tool.hatch.version]
path = "src/tilde/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tilde"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
